--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,21 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :method => :get, :id => 'ratings_form' do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", :id => 'ratings_#{rating}'
+  = submit_tag 'Refresh', :id => 'ratings_submit'
+    
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ('hilite' if @hilite_column == 'title')} 
+        link_to 'Movie Title', movies_path(:title => 'sort')
       %th Rating
-      %th Release Date
+      %th{:class => ('hilite' if @hilite_column == 'release_date')} 
+        link_to 'Release Date',
       %th More Info
   %tbody
     - @movies.each do |movie|
